# npc-dialogue-engine

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: eval_config.yaml  model_config.yaml  rag_config.yaml
configs/characters/: blacksmith.yaml  mysterious_sage.yaml  tavern_keeper.yaml
data/eval/: adversarial_inputs.jsonl  golden_dialogues.jsonl
data/lore/: factions.md  items_and_materials.md  locations.md  magic_system.md  world_history.md
deploy/huggingface-space/: DEPLOY.md  README.md  app.py  requirements.txt
docker/: Dockerfile  Dockerfile.gpu  docker-compose.yml  prometheus.yml
docs/: architecture.md  case-study.md  failure-modes.md  model_card.md
docs/assets/: README.md
notebooks/: colab_finetune.ipynb
results/: README.md  eval_report.json
scripts/: __init__.py  export_model.py  generate_training_data.py  index_lore.py  render_eval_comparison.py  run_evaluation.py
src/: __init__.py
src/api/: app.py  middleware.py  routes.py  schemas.py
src/evaluation/: human_eval_app.py  metrics.py
src/models/: dialogue_model.py  intent_classifier.py
src/pipeline/: context_manager.py  dialogue_pipeline.py  prompt_templates.py
src/rag/: embeddings.py  lore_indexer.py  retriever.py
src/training/: data_generation.py  dataset.py  train_lora.py
src/utils/: config.py  logging_config.py  tracing.py
tests/: conftest.py  test_api.py  test_characters.py  test_config.py  test_context_manager.py  test_dialogue_pipeline.py  test_evaluation.py  test_export_model.py  test_intent_classifier.py  test_prompt_templates.py  test_render_eval_comparison.py  test_retriever.py  test_run_evaluation_cli.py  test_tracing.py  test_training.py
