[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "npc-dialogue-engine"
version = "0.1.0"
description = "AI-powered dynamic NPC dialogue system for games"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Tahir T", email = "7ahir@users.noreply.github.com"},
]

dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "structlog>=24.1.0",
    "jinja2>=3.1.0",
    "prometheus-client>=0.20.0",
    "httpx>=0.27.0",
    "sse-starlette>=2.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
ml = [
    "torch>=2.1.0",
    "transformers>=4.40.0,<5.0.0",
    "peft>=0.10.0",
    "trl>=0.8.0",
    "sentence-transformers>=2.7.0,<4.0.0",
    "chromadb>=0.5.0",
    "numpy<2",
]
gpu = [
    "bitsandbytes>=0.42.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
]
eval = [
    "bert-score>=0.3.13",
    "gradio>=4.0.0",
    "matplotlib>=3.8.0",
    "pandas>=2.2.0",
]
train = [
    "datasets>=2.19.0",
    "accelerate>=0.30.0",
    "wandb>=0.17.0",
]

[project.scripts]
npc-eval = "scripts.run_evaluation:main"
npc-generate-data = "scripts.generate_training_data:main"
npc-index-lore = "scripts.index_lore:main"
npc-export = "scripts.export_model:main"

[tool.setuptools.packages.find]
include = ["src*", "scripts*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests requiring external services",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
