[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "npc-dialogue-engine"
version = "0.1.0"
description = "AI-powered dynamic NPC dialogue system for games"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Tahir T", email = "7ahir@users.noreply.github.com"},
]

dependencies = [
    "fastapi>=0.136.1",
    "uvicorn[standard]>=0.47.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "structlog>=25.5.0",
    "jinja2>=3.1.6",
    "prometheus-client>=0.25.0",
    "httpx>=0.28.1",
    "sse-starlette>=3.4.4",
    "pyyaml>=6.0.3",
]

[project.optional-dependencies]
ml = [
    "torch>=2.12.0",
    "transformers>=5.8.1,<6.0.0",
    "peft>=0.19.1",
    "trl>=1.4.0",
    "sentence-transformers>=5.5.1,<6.0.0",
    "chromadb>=1.5.9",
    "numpy>=2.4.6,<3",
]
gpu = [
    "bitsandbytes>=0.49.2",
]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.13",
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
]
eval = [
    "bert-score>=0.3.13",
    "gradio>=6.14.0",
    "matplotlib>=3.10.9",
    "pandas>=3.0.3",
]
train = [
    "datasets>=4.8.5",
    "accelerate>=1.13.0",
    "wandb>=0.27.0",
]

[project.scripts]
npc-eval = "scripts.run_evaluation:main"
npc-generate-data = "scripts.generate_training_data:main"
npc-index-lore = "scripts.index_lore:main"
npc-export = "scripts.export_model:main"
npc-render-eval-comparison = "scripts.render_eval_comparison:main"

[tool.setuptools.packages.find]
include = ["src*", "scripts*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests requiring external services",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
